2001-10-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: cleaned up some more (especially C++ comp. detection)
	* gamewin.cc: fixed palette glitch in plasma screen

2001-10-12  Max Horn  <max@quendi.de>
	* configure.in: some cleanup, added some suggestions from autoscan

2001-10-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/*/defaultkeys.txt: fixed abacus keybinding
	* GameplayOptions_gump.cc: cleaned up loading of bg_paperdolls setting
	* cheat_screen.cc: save paperdoll setting here too
	* gamewin.cc: fixed loading of bg_paperdoll setting
	* gamewin.h: added some const's

2001-10-12  Tristan Tarrant <nadir@users.sourceforge.net>
	More patches from Christian Ohm <chr.ohm@gmx.net>
	mouse.patch, gumps/Gameplay_options.* : Implement GameplayOptions 
	menu and add fast mouse and middle mouse button support
	data/credits.txt: credit where credit is due :)

2001-10-12  Tristan Tarrant <nadir@users.sourceforge.net>
	Patch from Christian Ohm <chr.ohm@gmx.net>
	abacus.patch: add a keyboard shortcut ('g') to use the
	abacus. 

2001-10-11  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Rewrote code to read from weapons.dat.
	* combat.cc (Combat_schedule): More fixups for slimes.

2001-10-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* effects.*: changed explosion effect to do damage in the middle of
	the explosion instead of afterwards
	* objs.cc: powderkegs blow up more doors
	* objs.cc: powderkegs blow up other powderkegs
	* gamewin.*: clear effects queue when reloading

2001-10-11  Jeff Freedman  <jeff@amy.nerble.net>

	* monsters.cc: Slime movement is starting to work.

2001-10-09  Jeff Freedman  <jeff@amy.nerble.net>

	* Makefile.am (exult_SOURCES): Added monsters.cc, monsters.h.
	* readnpcs.cc,actors.cc,actors.h,actorio.cc:  Actor::read()
	replaces constructors that read.  Special Slime_actor added.

2001-10-08  Jeff Freedman  <jeff@amy.nerble.net>
